--- a/templates/channels.html
+++ b/templates/channels.html
@@ -1141,14 +1141,14 @@
                             <div class="channel-name">${channel.name}</div>
                             <div class="channel-stats">
                                 ${channel.track_count || 0} tracks
-                                ${channel.last_sync_ts ? '• Last sync: ' + new Date(channel.last_sync_ts).toLocaleString('ru-RU', { 
+                                ${channel.last_sync_ts ? '• Last sync: ' + new Date(channel.last_sync_ts + 'Z').toLocaleString('ru-RU', { 
                                     year: 'numeric', 
                                     month: '2-digit', 
                                     day: '2-digit', 
                                     hour: '2-digit', 
                                     minute: '2-digit', 
                                     second: '2-digit',
-                                    hour12: false 
+                                    hour12: false
                                 }) : '• Never synced'}
                             </div>
                         </div>
