--- a/templates/deleted.html
+++ b/templates/deleted.html
@@ -1336,13 +1336,13 @@ Local (${timezone}): ${localTime}`;
                     const clearBtn = document.getElementById('clearTrashBtn');
                     if (data.total_files === 0) {
                         clearBtn.disabled = true;
-                        clearBtn.innerHTML = `
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                              <polyline points="3,6 5,6 21,6"></polyline>
-                              <path d="m19,6v14a2,2 0 0,1-2,2H7a2,2 0 0,1-2-2V6m3,0V4a2,2 0 0,1,2-2h4a2,2 0 0,1,2,2v2"></path>
-                            </svg>
-                            Empty
-                        `;
+                                            clearBtn.innerHTML = `
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                          <polyline points="3,6 5,6 21,6"></polyline>
+                          <path d="m19,6v14a2,2 0 0,1-2,2H7a2,2 0 0,1-2-2V6m3,0V4a2,2 0 0,1,2-2h4a2,2 0 0,1,2,2v2"></path>
+                        </svg>
+                        Empty Trash
+                    `;
                     } else {
                         clearBtn.disabled = false;
                         clearBtn.innerHTML = `
