--- a/templates/channels.html
+++ b/templates/channels.html
@@ -1114,6 +1114,9 @@
                                         </svg>
                                         Quick Sync All
                                     </button>
+                                    <button class="btn btn-primary" onclick="window.open('/playlist/' + encodeURIComponent('${group.name}'), '_blank')" title="Play group playlist">
+                                        Play
+                                    </button>
                                 ` : `
                                     <button class="btn btn-danger" onclick="deleteEmptyChannelGroup(${group.id}, '${group.name}')">
                                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
